# rust-chess

./: .gitignore  Cargo.toml  README.md  build.rs  cargo_build.bat  cargo_check.bat  cargo_debug_build.bat  cargo_debug_run.bat  cargo_release_build.bat  cargo_release_run.bat  cargo_run.bat
res/: config.ron  config.toml
res/shaders/: standard.frag  standard.vert  triangle.frag  triangle.vert
src/: config.rs  game.rs  graphics.rs  input.rs  main.rs  maths.rs  resources.rs  transform.rs
src/graphics/: batches.rs  camera.rs  data.rs  drawcall.rs  manager.rs  mesh.rs  mod.rs  shaders.rs  sprites.rs
src/maths/: matrix.rs  mod.rs  transform.rs  vector.rs
